--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,9 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# build.py
+build*.py
+release/
+
