--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - '*'
 
 jobs:
-  goreleaser:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,12 +25,6 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build-docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -51,6 +45,7 @@ jobs:
             TAG=${{github.ref_name}}
             REPOSITORY=IrineSistiana/simple-tls
           platforms: linux/amd64,linux/arm/v7,linux/arm64
+          file: ./Dockerfile_buildx_actions
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/simple-tls:latest
