--- a/Dockerfile_buildx
+++ b/Dockerfile_buildx
@@ -1,4 +1,4 @@
-FROM golang:latest as builder
+FROM --platform=${TARGETPLATFORM} golang:latest as builder
 ARG REPOSITORY=IrineSistiana/simple-tls
 ARG TAG
 ARG CGO_ENABLED=0
@@ -10,7 +10,7 @@ RUN git clone https://github.com/${REPOSITORY} simple-tls \
 	&& git checkout tags/${TAG} \
 	&& go build -ldflags "-s -w -X main.version=${TAG}" -trimpath -o simple-tls
 
-FROM alpine:latest
+FROM --platform=${TARGETPLATFORM} alpine:latest
 LABEL maintainer="IrineSistiana <github.com/IrineSistiana>"
 
 COPY --from=builder /root/simple-tls/simple-tls /usr/bin/
